#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(boost_test, 1.0, kfengdev@gmail.com)
AC_CONFIG_SRCDIR(src)
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CONFIG_FILES([
	Makefile
	src/Makefile
	])
# Checks for library functions.
AC_OUTPUT
