bin_PROGRAMS = memory/sharedptr \
	memory/pool \
	string_algo/str_algo \
    ch4_utils/utils \
    ch10_os/ch10_os

memory_sharedptr_SOURCES = memory/sharedptr.cpp
memory_pool_SOURCES = memory/pool.cpp
string_algo_str_algo_SOURCES = string_algo/str_algo.cpp
ch4_utils_utils_SOURCES = ch4_utils/util_tools.cpp
ch10_os_ch10_os_SOURCES = ch10_os/ch10_os.cpp
